Added new strings for 1.4.0  and 2 small fixes

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -27,13 +27,13 @@
     <string name="http_server">HTTP сервер</string>
     <string name="udp_exporter">UDP экспортёр</string>
     <string name="no_dump">Никакой</string>
-    <string name="no_dump_info">PCAP не будет складироваться</string>
+    <string name="no_dump_info">PCAP не будет записываться</string>
     <string name="http_server_info">Запустить HTTP сервер для скачивания PCAP</string>
     <string name="udp_exporter_info">Отправляет PCAP на удалённый UDP приёмник</string>
     <string name="http_server_port">Порт HTTP сервера</string>
     <string name="receiver_ip_address">IP адрес сборщика</string>
     <string name="receiver_port">Порт сборщика</string>
-    <string name="dump_mode">Режим складирования</string>
+    <string name="dump_mode">Режим записи</string>
     <string name="tls_proxy_ip_address">IP адрес "человек посередине" прокси</string>
     <string name="tls_proxy_port">Порт "человек посередине" прокси</string>
     <string name="enable_tls_decryption">Включить TLS дешифрование</string>
@@ -138,4 +138,22 @@
     <string name="whitelist_empty">Белый список пуст.\nИспользуйте долгое нажатие на строку соединения для добавления.</string>
     <string name="n_selected">%1$d выбран(о)</string>
     <string name="select_all">Выбрать все</string>
+    <string name="app_details">Информация о приложении</string>
+    <string name="package_name">Имя пакета</string>
+    <string name="uid">Идентификатор (UID)</string>
+    <string name="app_name">Название</string>
+    <string name="version">Версия</string>
+    <string name="target_sdk">Целевой уровень SDK</string>
+    <string name="installed_on">Установлено</string>
+    <string name="last_update">Последнее обновление</string>
+    <string name="permissions">Разрешения</string>
+    <string name="root_app_info">Системные сервисы запущенные с наивысшими привелегиями.</string>
+    <string name="netd_app_info">Системный сервис отвечающий за выполнение DNS запросов.</string>
+    <string name="android_app_info">ОС Android.</string>
+    <string name="unknown_app_info">Пометка \"Неизвестное\" присваивается соединениям, у которых не удалось определить приложение-источник.</string>
+    <string name="packets_dropped">Отброшенные пакеты</string>
+    <string name="capture_prefs">Захват трафика</string>
+    <string name="pcapdroid_trailer">PCAPdroid Trailer</string>
+    <string name="pcapdroid_trailer_summary">Trailer содержит дополнительные мета-данные, такие как название приложения и его идентификатор в системе(UID), которые будут добавлены в дамп.</string>
+    <string name="trailer_how_to">Как отобразить данные из Trailer в Wireshark</string>
 </resources>
