Add ability to select interface in root mode
Closes #110

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -175,5 +175,9 @@
     <string name="ctrl_consent_title">PCAPdroid Control Request</string>
     <string name="ctrl_consent_denied">The control request was denied</string>
     <string name="ctrl_consent_allowed">The control request was allowed</string>
+    <string name="capture_interface">Capture Interface</string>
+    <string name="internet">Internet</string>
+    <string name="all_interfaces">All Interfaces</string>
+    <string name="capturing_from">Capturing packets from \"%1$s\"</string>
 </resources>
 
