--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -175,4 +175,8 @@
     <string name="ctrl_consent_title">PCAPdroid 控制请求</string>
     <string name="ctrl_consent_denied">控制请求被拒绝</string>
     <string name="ctrl_consent_allowed">控制请求被允许</string>
+    <string name="capture_interface">捕获接口</string>
+    <string name="internet">互联网</string>
+    <string name="all_interfaces">所有接口</string>
+    <string name="capturing_from">正从 \"%1$s\" 捕获数据包</string>
 </resources>
