Improve control via Intent
- Fix app state not refreshed
- Fix VPNService.prepare not called
- Add missing pcap_uri parameter

--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -169,6 +169,6 @@
     <string name="capture_interface">Interfaccia di Cattura</string>
     <string name="internet">Internet</string>
     <string name="all_interfaces">Tutte le Interfacce</string>
-    <string name="capturing_from">Cattura in esecuzione su \"%1$s\"</string>
+    <string name="capturing_from">Cattura in corso da \"%1$s\"</string>
 </resources>
 
