Implement blacklist-based malware detection
A notification is generated when a connection matches known malicious
domains or IP addresses. The connections view reports malicious
connections with a skull icon. A filter can be set to only show them.

Needed for #105

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -185,5 +185,10 @@
     <string name="edit_rules">Edit Rules</string>
     <string name="hidden_connections_rules">Hidden Connections Rules</string>
     <string name="no_rules">No rules</string>
+    <string name="malicious_connection_app">Malicious connection detected (%1$s)</string>
+    <string name="show_only_malicious">Only malicious connections</string>
+    <string name="security">Security</string>
+    <string name="malware_detection">Malware Detection</string>
+    <string name="malware_detection_summary">"Detect possibly malicious connections and trigger alerts. NOTE: the detection can produce false positives and is not a valid alternative to an antivirus."</string>
 </resources>
 
