--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -198,5 +198,8 @@
     <string name="edit_malware_whitelist">Edit Malware Whitelist</string>
     <string name="feature_not_available">This feature is currently unavailable for your device</string>
     <string name="billing_connecting">The connection to Google Play is in progress, please retry in a while</string>
+    <string name="show_help">Show help</string>
+    <string name="malware_whitelist_help">This user-defined whitelist is used to inhibit malware detection. Connections matching any of these rules will not be marked as malware. You can create rules by long pressing a malicious connection.</string>
+    <string name="hidden_connections_help">This list contains rules to hide connections from the connections list. This allows you to focus on the relevant connections.</string>
 </resources>
 
