--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -180,7 +180,7 @@
     <string name="all_interfaces">All Interfaces</string>
     <string name="capturing_from">Capturing packets from \"%1$s\"</string>
     <string name="edit_filter">Edit Filter</string>
-    <string name="show_hidden_connections">Show hidden connections</string>
+    <string name="hide_connections">Hide connections</string>
     <string name="edit_list">Edit List</string>
     <string name="hidden_connections_rules">Hidden Connections Rules</string>
     <string name="list_is_empty">List is empty</string>
@@ -200,6 +200,9 @@
     <string name="billing_connecting">The connection to Google Play is in progress, please retry in a while</string>
     <string name="show_help">Show help</string>
     <string name="malware_whitelist_help">This user-defined whitelist is used to inhibit malware detection. Connections matching any of these rules will not be marked as malware. You can create rules by long pressing a malicious connection.</string>
-    <string name="hidden_connections_help">This list contains rules to hide connections from the connections list. This allows you to focus on the relevant connections.</string>
+    <string name="hidden_connections_help">This list contains rules to hide connections from the connections list. Hiding connections allows you to focus on the relevant ones.</string>
+    <string name="malicious_filter">malicious</string>
+    <string name="status_filter">status: %1$s</string>
+    <string name="not_hidden_filter">not hidden</string>
 </resources>
 
