--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -180,7 +180,6 @@
     <string name="all_interfaces">All Interfaces</string>
     <string name="capturing_from">Capturing packets from \"%1$s\"</string>
     <string name="edit_filter">Edit Filter</string>
-    <string name="hide_connections">Hide connections</string>
     <string name="edit_list">Edit List</string>
     <string name="hidden_connections_rules">Hidden Connections Rules</string>
     <string name="list_is_empty">List is empty</string>
@@ -201,10 +200,12 @@
     <string name="show_help">Show help</string>
     <string name="malware_whitelist_help">This user-defined whitelist is used to inhibit malware detection. Connections matching any of these rules will not be marked as malware. You can create rules by long pressing a malicious connection.</string>
     <string name="hidden_connections_help">This list contains rules to hide connections from the connections list. Hiding connections allows you to focus on the relevant ones.</string>
-    <string name="malicious_filter">malicious</string>
-    <string name="status_filter">status: %1$s</string>
-    <string name="not_hidden_filter">not hidden</string>
+    <string name="malicious_filter">Malicious</string>
+    <string name="status_filter">Status: %1$s</string>
+    <string name="not_hidden_filter">Not hidden</string>
     <string name="copy_action">Copy…</string>
     <string name="url_val">"URL: %1$s"</string>
+    <string name="show_only_plaintext">Plaintext connections</string>
+    <string name="plaintext">Plaintext</string>
 </resources>
 
