--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -150,5 +150,36 @@
     <string name="internet">Internet</string>
     <string name="all_interfaces">Tutte le Interfacce</string>
     <string name="capturing_from">Cattura in corso da \"%1$s\"</string>
+    <string name="edit_filter">Modifica Filtro</string>
+    <string name="edit_list">Modifica Lista</string>
+    <string name="hidden_connections_rules">Regole Connessioni Nascoste</string>
+    <string name="list_is_empty">La lista è vuota</string>
+    <string name="malicious_connection_app">Rilevata connessione malevola (%1$s)</string>
+    <string name="show_only_malicious">Connessioni Malevole</string>
+    <string name="security">Sicurezza</string>
+    <string name="malware_detection">Rilevamento Malware</string>
+    <string name="malware_detection_summary">Rileva le connessioni a host malevoli tramite blacklist di terze parti. Il rilevamento potrebbe genare falsi positivi e non sostituisce un antivirus.</string>
+    <string name="blacklists_status">Stato delle Blacklist</string>
+    <string name="blacklists_status_summary">Aggiornate: %1$d/%2$d ― Regole dominio: %3$s ― Regole IP: %4$s\nUltimo aggiornamento: %5$s</string>
+    <string name="reset">Reimposta</string>
+    <string name="malware_whitelist">Whitelist Malware</string>
+    <string name="malware_whitelist_rules">Regole della Whitelist Malware</string>
+    <string name="edit_hidden_connections">Modifica Connessioni Nascoste</string>
+    <string name="edit_malware_whitelist">Modifica Whitelist Malware</string>
+    <string name="feature_not_available">Questa funzione non è attualmente disponibile per il tuo dispositivo</string>
+    <string name="billing_connecting">La connessione a Google Play è in corso, riprovare tra poco</string>
+    <string name="show_help">Mostra aiuto</string>
+    <string name="malware_whitelist_help">Questa whitelist, definita dall\'utente, è usata per inibire il rilevanto di malware. Le connessioni che matchano queste regole non sono considerate malevole. Puoi creare nuove regole tenendo premuta una connessione malevola.</string>
+    <string name="hidden_connections_help">Questa lista contiene regole usate per nascondere connessioni dalla lista delle connessioni. Nascondere connessione permette di focalizzarsi su quelle rilevanti.</string>
+    <string name="malicious_connection_filter">Malevola</string>
+    <string name="status_filter">Stato: %1$s</string>
+    <string name="not_hidden_filter">Non nascosta</string>
+    <string name="copy_action">Copia…</string>
+    <string name="url_val">"URL: %1$s"</string>
+    <string name="show_only_plaintext">Connessioni in chiaro</string>
+    <string name="plaintext">In chiaro</string>
+    <string name="malware_detection_ad0">Sei pronto a migliorare la sicurezza del tuo dispositivo?</string>
+    <string name="malware_detection_ad1">Scopri il rilevamento malware in PCAPdroid!</string>
+    <string name="show_me">Mostrami</string>
 </resources>
 
