--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -12,6 +12,7 @@
     <string name="start_button">启动</string>
     <string name="stop_button">停止</string>
     <string name="title_activity_settings">设置</string>
+    <string name="collector_info">UDP 收集器： %1$s:%2$d</string>
     <string name="http_server_status">HTTP 服务器： http://%1$s:%2$d</string>
     <string name="rcvd_and_sent">%1$s 已接收 — %2$s 已发送</string>
     <string name="query">查询</string>
@@ -179,7 +180,7 @@
     <string name="feature_not_available">此功能目前在您的设备上不可用</string>
     <string name="billing_connecting">正在连接 Google Play，请稍候再试</string>
     <string name="show_help">显示帮助</string>
-    <string name="malware_whitelist_help">此用户定义白名单用于禁止恶意软件检测。只要命中这些规则中的任意一条，连接就不会被标记为恶意。通过长按连接，您可以将其标记为“非恶意”</string>
+    <string name="malware_whitelist_help">此用户定义白名单用于禁止恶意软件检测。只要命中这些规则中的任意一条，连接就不会被标记为恶意。通过长按连接，您可以将其标记为”非恶意“</string>
     <string name="hidden_connections_help">此列表包含从连接列表中隐藏连接的规则。隐藏连接可以让你专注于相关的连接。</string>
     <string name="malicious_connection_filter">恶意的</string>
     <string name="status_filter">状态： %1$s</string>
