new strings translated to russian

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -116,6 +116,7 @@
     <string name="host_val">Хост: %1$s</string>
     <string name="protocol_val">Протокол: %1$s</string>
     <string name="whitelist_action">В белый список</string>
+    <string name="hide">Скрыть…</string>
     <string name="n_selected">%1$d выбран(о)</string>
     <string name="select_all">Выбрать все</string>
     <string name="app_details">Информация о приложении</string>
@@ -150,4 +151,33 @@
     <string name="internet">Интернет</string>
     <string name="all_interfaces">Все интерфейсы</string>
     <string name="capturing_from">Перехватываются пакеты с \"%1$s\"</string>
+    <string name="edit_filter">Изменить фильтр</string>
+    <string name="edit_list">Изменить список</string>
+    <string name="hidden_connections_rules">Правила скрытия соединений</string>
+    <string name="list_is_empty">Список пуст</string>
+    <string name="malicious_connection_app">Вредоносные соединения обнаружены (%1$s)</string>
+    <string name="show_only_malicious">Вредоносные соединения</string>
+    <string name="security">Безопасность</string>
+    <string name="malware_detection">Обнаружение вредоносных соединений</string>
+    <string name="malware_detection_summary">Обнаружение соединений с известными вредоносными хостами на основе использования сторонних черных списков. Данная опция может давать ложные срабатывания и не является альтернативой антивирусам.</string>
+    <string name="blacklists_status">Состояние черного списка</string>
+    <string name="blacklists_status_summary">Обновлено списков: %1$d/%2$d ― Вредоносных доменов: %3$s ― Вредоносных IP: %4$s\nПоследнее обновление: %5$s</string>
+    <string name="reset">Сбросить</string>
+    <string name="malware_whitelist">Белый список вредоносов</string>
+    <string name="malware_whitelist_rules">Правила игнорирования вредоносов</string>
+    <string name="feature_not_available">Эта возможность на текущий момент недоступна для вашего устройства</string>
+    <string name="billing_connecting">Подключение к Google Play в процессе, пожалуйста попробуйте еще раз позже</string>
+    <string name="show_help">Показать помощь</string>
+    <string name="malware_whitelist_help">Этот пользовательский список используется для подавления некоторых срабатываний обнаружения вредоносных соединений. Соединения попадающие под любое из этих правил не будут отмечены как вредоносные. Создавать правила вы можете через долгое нажатие по обнаруженному вредоносному соединению.</string>
+    <string name="hidden_connections_help">В списке содержатся правила для скрытия соединений из списка. Это позволяет сфокусироваться только на необходимых соединениях.</string>
+    <string name="malicious_connection_filter">Вредоносные</string>
+    <string name="status_filter">Статус: %1$s</string>
+    <string name="not_hidden_filter">Не скрыты</string>
+    <string name="copy_action">Копировать…</string>
+    <string name="url_val">"URL: %1$s"</string>
+    <string name="show_only_plaintext">Открытые текстовые соединения</string>
+    <string name="plaintext">Открытый текст</string>
+    <string name="malware_detection_ad0">Готовы улучшить безопасность своего устройства?</string>
+    <string name="malware_detection_ad1">Встречайте обнаружение вредоносных соединений в PCAPdroid!</string>
+    <string name="show_me">Покажите мне</string>
 </resources>
