--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -190,5 +190,6 @@
     <string name="malware_detection_ad0">Ready to enhance the security of your device?</string>
     <string name="malware_detection_ad1">Meet the PCAPdroid malware detection!</string>
     <string name="show_me">Show me</string>
+    <string name="hint">Hint</string>
 </resources>
 
